--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -20,12 +20,13 @@ definitions:
         services: [ docker ]
         caches: [ docker ]
         script:
-          - docker run
-            --env MERKELY_COMMAND=declare_pipeline
-            --env MERKELY_API_TOKEN=${MERKELY_API_TOKEN}
-            --rm
-            --volume ${PWD}/Merkelypipe.bitbucket.json:/data/Merkelypipe.json
-            merkely/change
+          - docker pull merkely/change:latest
+          - pipe: docker://merkely/change:latest
+            variables:
+              MERKELY_COMMAND: "declare_pipeline"
+              MERKELY_OWNER: "${MERKELY_OWNER}"
+              MERKELY_PIPELINE: "${MERKELY_PIPELINE}"
+              MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
 
     - step: &build_and_publish_docker_image
@@ -48,22 +49,19 @@ definitions:
         script:
           - *export_image_name_env_vars
           - *export_image_sha256_env_var
-          - docker run
-            --env MERKELY_COMMAND=log_artifact
-            --env MERKELY_FINGERPRINT=sha256://${SHA256}/${TAGGED_IMAGE}
-            --env MERKELY_IS_COMPLIANT=TRUE
-            --env MERKELY_API_TOKEN=${MERKELY_API_TOKEN}
-            --env BITBUCKET_WORKSPACE
-            --env BITBUCKET_REPO_SLUG
-            --env BITBUCKET_COMMIT
-            --env BITBUCKET_BUILD_NUMBER
-            --rm
-            --volume ${PWD}/Merkelypipe.bitbucket.json:/data/Merkelypipe.json
-            merkely/change
+          - docker pull merkely/change:latest
+          - pipe: docker://merkely/change:latest
+            variables:
+              MERKELY_COMMAND: "log_artifact"
+              MERKELY_OWNER: "${MERKELY_OWNER}"
+              MERKELY_PIPELINE: "${MERKELY_PIPELINE}"
+              MERKELY_FINGERPRINT: "sha256://${SHA256}/${TAGGED_IMAGE}"
+              MERKELY_IS_COMPLIANT: "TRUE"
+              MERKELY_API_TOKEN: "${MERKELY_API_TOKEN}"
 
 
     - step: &run_unit_tests
-        name: Run Units Tests, Write Results to build/test/pytest_unit.xml
+        name: Run units tests, log results in Merkely
         services: [ docker ]
         caches: [ docker ]
         script:
@@ -76,17 +74,7 @@ definitions:
           - mkdir -p build/test
           - docker cp container:/code/build/test/ ${PWD}/build
           - docker rm container
-        artifacts:
-          - build/test/pytest_unit.xml
-
-
-    - step: &merkely_log_unit_tests_results
-        name: Log Unit Tests Results to Merkely
-        services: [ docker ]
-        caches: [ docker ]
-        script:
-          - *export_image_name_env_vars
-          - *export_image_sha256_env_var
+          - # Log results in Merkely
           - TEST_RESULTS_FILE=build/test/pytest_unit.xml
           - docker run
               --env MERKELY_COMMAND=log_test
@@ -103,28 +91,19 @@ definitions:
 
 
     - step: &run_security_analysis
-        name: Run Security Analysis, Write Results to build/security/security.xml
+        name: Run security analysis, log results in Merkely
         services: [ docker ]
         caches: [ docker ]
         script:
           - *export_image_name_env_vars
+          - *export_image_sha256_env_var
           - mkdir -p build/security
           - docker run
               --rm
               --volume ${PWD}/build:/code/build
               --entrypoint ./entrypoint-security.sh
               ${TAGGED_IMAGE}
-        artifacts:
-          - build/security/security.xml
-
-
-    - step: &merkely_log_security_results
-        name: Log Security Results in Merkely
-        services: [ docker ]
-        caches: [ docker ]
-        script:
-          - *export_image_name_env_vars
-          - *export_image_sha256_env_var
+          - # Log results in Merkely
           - SECURITY_RESULTS_FILE=build/security/security.xml
           - docker run
             --env MERKELY_COMMAND=log_test
@@ -141,28 +120,19 @@ definitions:
 
 
     - step: &run_coverage_analysis
-        name: Run Coverage Analysis, Write Summary to build/coverage/coverage_summary.sh
+        name: Run coverage analysis, log results in Merkely
         services: [ docker ]
         caches: [ docker ]
         script:
           - *export_image_name_env_vars
+          - *export_image_sha256_env_var
           - mkdir -p build/coverage
           - docker run
               --entrypoint ./entrypoint-coverage.sh
               --rm
               --volume ${PWD}/build:/code/build
               ${TAGGED_IMAGE}
-        artifacts:
-          - build/coverage/coverage_summary.sh
-
-
-    - step: &merkely_log_coverage_results
-        name: Log Coverage Analysis Results in Merkely
-        services: [ docker ]
-        caches: [ docker ]
-        script:
-          - *export_image_name_env_vars
-          - *export_image_sha256_env_var
+          - # Log results in Merkely
           - source build/coverage/coverage_summary.sh
           - docker pull merkely/change:latest
           - pipe: docker://merkely/change:latest
@@ -178,18 +148,14 @@ definitions:
 
 
     - step: &deploy_to_staging
-        name: Deploy to staging
-        script:
-          - echo YOUR DEPLOYMENT COMMAND HERE
-
-
-    - step: &merkely_log_deployment
-        name: Log deployment in Merkely
+        name: Deploy to staging, log deployment in Merkely
         services: [ docker ]
         caches: [ docker ]
         script:
+          - echo YOUR DEPLOYMENT COMMAND HERE
           - *export_image_name_env_vars
           - *export_image_sha256_env_var
+          - # Log deployment in Merkely
           - docker pull merkely/change:latest
           - pipe: docker://merkely/change:latest
             variables:
@@ -208,10 +174,6 @@ pipelines:
     - step: *build_and_publish_docker_image
     - step: *merkely_log_docker_image
     - step: *run_unit_tests
-    - step: *merkely_log_unit_tests_results
     - step: *run_security_analysis
-    - step: *merkely_log_security_results
     - step: *run_coverage_analysis
-    - step: *merkely_log_coverage_results
     - step: *deploy_to_staging
-    - step: *merkely_log_deployment
